--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ nav button span {
 }
 
 .head-details p {
-    width: 30vw;
+    width: 26vw;
     font-size: 15px;
 }
 
@@ -249,12 +249,15 @@ nav button span {
 }
 
 .planBox h1 {
-    font-size: 32px
+    font-size: 32px;
+    line-height: 35px;
 }
 
 .plan-descripe {
     width: 286px;
     font-weight: 500;
+    margin: 15px 0px;
+    
 }
 
 .planBox h1 {
@@ -264,6 +267,7 @@ nav button span {
 
 .planBox ul {
     padding-left: 30px;
+    margin: 15px 0px;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -459,4 +463,19 @@ footer ul {
 footer img {
     width: 20px;
     margin-right: 12px;
+}
+
+.red {
+    margin: auto;
+}
+
+b{
+    font-weight: bold;
+}
+ 
+.note {
+    margin: 30px 0px;
+    width: 60vw;
+    position: relative;
+    right:80px;
 }
